# Captals

./: .env.example  .gitignore  BASE44_COMPONENTS.md  CLAUDE.md  INDEX.md  INTEGRATION_BASE44.md  MATVERSEOS.md  MATVERSE_OS_COMPLETE.md  README-CHROMEOS.md  README.md  XI-LUA-v2-SUMMARY.md  docker-compose.yml  hardhat.config.js  matverse-os.html  meta-dev  package-lock.json  package.json  quick-deploy.sh  ξ-lua
.claude/: session-start-hook.yaml
.github/workflows/: ci-cd.yml  codeql.yml  instrumented-state-machine-rust.yml  instrumented-state-machine-tests.yml
backend/: main.py  requirements.txt  test_main.py
backend/routes/: funds.py  (+3 more)
bot/: Dockerfile  bot.py  requirements.txt  sales_agent.py
captals/instrumented-state-machine-rust/: Cargo.toml  README.md
captals/instrumented-state-machine-rust/ci/: github-actions.yml
captals/instrumented-state-machine-rust/src/: lib.rs  main.rs
docs/: pitch-deck.md  whitepaper.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json
huggingface/: app.py  requirements.txt
ia-metamask/: .env.example  .gitignore  README.md  api-server.js  ia-metamask.js  install-quick.sh  package.json
installers/: zero-chromeos.sh  zero.sh
matverse-copilot/: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  install-quick.sh  requirements.txt  setup.py
omega-capitals/: .env.example  .gitignore  README.md  docker-compose.yml  quick-start.sh
scripts/: deploy-mainnet.js  deploy-testnet.js
test/: OmegaCapitals.test.js
watcher/: dual_brain_sync.py
xi-lua/: INSTALL.md  LUA-AUTOHEAL.md  README.md  cli.py
(+87 files in other folders)
